probes/main/default/objects/SMF7_Call_Room__c/SMF7_Call_Room__c.object-meta.xml
<CustomObject>
    <description>SMF-7: Case to RealtimeKit meeting mapping. Server-side only: no user object permissions; read and written by SMF7_CallRoomStore after a user-mode case check.</description>
    <label>SMF7 Call Room</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>SMF7 Call Room Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMF7 Call Rooms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>