probes/main/default/objects/SMF7_Call_Room__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case whose call room this is.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>SMF7_Call_Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>