probes/main/default/objects/SMF7_Call_Room__c/fields/CaseKey__c.field-meta.xml
<CustomField>
    <fullName>CaseKey__c</fullName>
    <description>Unique 18-char Case id; prevents two meetings per case.</description>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
    <label>Case Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>