probes/main/default/objects/SMF7_Call_Room__c/fields/MeetingId__c.field-meta.xml
<CustomField>
    <fullName>MeetingId__c</fullName>
    <description>RealtimeKit meeting id (provider identifier; private).</description>
    <label>Meeting Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>